<resources>
    <string name="app_name">Eat It</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="tag">We are food lovers and we like provide a free service for make your habbit easy and comfortable.</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="log_out">Log Out</string>
    <string name="place_order">Place Order</string>
    <string name="action_refresh">Refresh</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="facebook_app_id">2301224870138167</string>
    <string name="profile">Profile</string>
    <string name="action_profile">Profile</string>
    <string name="address">Address</string>

    <integer name="animation_duration_medium">800</integer>
</resources>