<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/signUpAddImgIV"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:src="@drawable/person_icon"
            app:civ_border_color="@color/biscay"
            app:civ_border_width="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/biscay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signUpPhoneNumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/biscay"
                android:drawableRight="@drawable/ic_phone_black_24dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:textColorHint="@color/biscay"
                tools:layout_editor_absoluteY="11dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/biscay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signUpEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/biscay"
                android:hint="@string/email"
                android:drawableRight="@drawable/ic_mail_outline_black_24dp"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@color/softWhite"
                tools:layout_editor_absoluteY="11dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/biscay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signUpAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/biscay"
                android:hint="@string/address"
                android:drawableRight="@drawable/ic_location_on_black_24dp"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black"
                android:textColorHint="@color/softWhite"
                tools:layout_editor_absoluteY="11dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/biscay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpAddImgIV"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signUpFullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/biscay"
                android:drawableRight="@drawable/ic_person_outline_black_24dp"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="@color/biscay"
                tools:layout_editor_absoluteY="11dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/biscay"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/biscay"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signUpUserPassEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/biscay"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/biscay"
                tools:layout_editor_absoluteY="11dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUpSignButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:background="@color/biscay"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            app:layout_constraintBottom_toBottomOf="@+id/signUpAddImgIV"
            app:layout_constraintStart_toStartOf="@+id/signUpAddImgIV"
            app:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
